# interpreter

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  FORMATTER_RULES.md  GUIDE.md  I18N.md  IMPLEMENTATION.md  IMPLEMENTATION_PLAN_ZEETHY_FIXES.md  LICENSE  MANUAL.md  MANUALdeprecate.md  MATCH_DESIGN.md  README.md  REFERENCE.md  RELEASE_v0.0.2.md  ROADMAP.md  VM_PARITY_PLAN.md  hallasgos_fmt.md  install-zymbol.sh  test_manual.mjs  zymbol-lang.ebnf
.github/workflows/: release-aarch64-static.yml  release-macos.yml  release-windows.yml
analysis/: ES_P0A_analisis_tecnico.md  ES_analisis_zymbol_v0_0_4.md  ES_issues_v0_0_4.md  revision_segunda_pasada_v0_0_4.md
crates/zymbol-analyzer/: Cargo.toml
crates/zymbol-analyzer/src/: cache.rs  diagnostics.rs  document.rs  lib.rs  module_index.rs  semantic_tokens.rs  symbol_extractor.rs  symbols.rs  workspace.rs
crates/zymbol-ast/: Cargo.toml
crates/zymbol-bytecode/: Cargo.toml
crates/zymbol-cli/: Cargo.toml
crates/zymbol-cli/src/: main.rs
crates/zymbol-common/: Cargo.toml
crates/zymbol-compiler/: Cargo.toml
crates/zymbol-compiler/src/: lib.rs
crates/zymbol-error/: Cargo.toml
crates/zymbol-formatter/: Cargo.toml
crates/zymbol-formatter/src/: config.rs  lib.rs  output.rs  visitor.rs
crates/zymbol-interpreter/: Cargo.toml
crates/zymbol-interpreter/src/: arithmetic_ops.rs  collection_ops.rs  collections.rs  data_ops.rs  expr_eval.rs  expressions.rs  functions_lambda.rs  if_stmt.rs  index_nav.rs  io.rs  lib.rs  literals.rs  loops.rs  match_stmt.rs  modules.rs  numeral_mode.rs  script_exec.rs  string_ops.rs  variables.rs
crates/zymbol-interpreter/tests/: e2e.rs
crates/zymbol-intrinsics/: Cargo.toml
crates/zymbol-intrinsics/src/: lib.rs  search.rs  split.rs  transform.rs
crates/zymbol-lexer/: Cargo.toml
crates/zymbol-lsp/: Cargo.toml
crates/zymbol-lsp/src/: lib.rs  main.rs
crates/zymbol-parser/: Cargo.toml
crates/zymbol-parser/src/: collection_ops.rs  collections.rs  data_ops.rs  error_handling.rs  expressions.rs  functions.rs  if_stmt.rs  index_nav.rs  io.rs  lib.rs  literals.rs  loops.rs  match_stmt.rs  modules.rs  script_exec.rs  string_ops.rs  variables.rs
crates/zymbol-repl/: Cargo.toml
crates/zymbol-repl/src/: colors.rs  lib.rs  line_editor.rs  raw_writer.rs  repl.rs
crates/zymbol-semantic/: Cargo.toml
crates/zymbol-semantic/src/: cfg.rs  def_use.rs  lib.rs  modules.rs  type_check.rs  variable_analysis.rs
crates/zymbol-semantic/tests/: auto_destruction.rs  underscore_semantics.rs
crates/zymbol-span/: Cargo.toml
crates/zymbol-standalone/: Cargo.toml
crates/zymbol-vm/: Cargo.toml
crates/zymbol-vm/src/: lib.rs  zy_str.rs
examples/: base_conversions_demo.zy  collections.zy  fibonacci.zy  hello.zy  newlines_demo.zy  pattern_match.zy  range_step_demo.zy  string_operations_comprehensive.zy  string_search_demo.zy  string_slicing_demo.zy  test_base_literals.zy
examples/demo/: complete_test.zy
examples/module_system/: ERROR_EXAMPLES.md  MODULE_DEPENDENCY_GRAPH.md  MODULE_EXAMPLES_OVERVIEW.md  README.md  TESTING_CHECKLIST.md  app.zl  simple_example.zl
examples/phase0/: escapes.zy  hello.zy  multiline.zy
examples/phase01/: 01_hello.zy  02_multiline.zy  03_assignment.zy  04_concatenation.zy  05_variables_concat.zy  06_unicode.zy  test_all_types.zy  test_boolean_expressions.zy  test_float_arithmetic.zy  test_float_char.zy  test_implemented_types.zy  test_types.zy
examples/phase02/: 01_input_basic  01_input_basic.zy  02_input_multiple  02_input_multiple.zy  03_input_variations.zy
examples/phase03/: 01_if_boolean.zy  02_if_comparison.zy  03_if_integer.zy  04_if_nested.zy  05_voting_age.zy  06_comparisons.zy
examples/phase04/: 01_arithmetic_basic.zy  02_precedence.zy  03_calculator.zy  04_comparisons_arithmetic.zy  05_modulo.zy  06_complex_expression.zy
examples/phase05/: 01_string_interpolation.zy  02_explicit_newlines.zy  03_haskell_style.zy  04_else_if_basic.zy  05_else_if_multiple.zy
examples/phase06/: 01_while_basic.zy  02_break.zy  03_continue.zy  04_infinite_loop.zy  05_nested_loops.zy  06_fizzbuzz.zy  07_fizzbuzz_elseif.zy  07_times_literal.zy  08_times_variable.zy  09_times_vs_while.zy  10_times_with_break.zy
examples/phase07/: 01_basic_range.zy  02_range_with_variables.zy  03_sum_range.zy  04_multiplication_table.zy  05_break_continue.zy  06_fizzbuzz_foreach.zy
examples/phase08/: 01_array_basics.zy  02_array_foreach.zy  03_nested_arrays.zy  04_array_operations.zy
examples/phase09/: 01_basic_function.zy  02_no_return.zy  03_output_parameters.zy  04_mutable_parameter.zy  05_factorial.zy  06_output_and_return.zy  07_mutable_vs_output.zy  08_expression_statements.zy
examples/phase1/: reassign.zy  variables.zy
examples/phase11/: 01_basic_match.zy  02_range_patterns.zy  03_list_patterns.zy  04_guards.zy  05_grade_calculator.zy  (+2 more)
packaging/: build-packages.sh  build-release.sh  publish-release.sh
tests/: BUG_v0.0.4.md  README.md  expression_statements_verification.expected  expression_statements_verification.zy  memory01_lambda_capture.expected  memory01_lambda_capture.zy  memory02_function_isolation.expected  memory02_function_isolation.zy  memory03_module_isolation.expected  memory03_module_isolation.zy  memory04_lambda_vs_function.expected  memory04_lambda_vs_function.zy  memory05_function_error.expected  memory05_function_error.zy  memory_correct_01_lambdas.expected  memory_correct_01_lambdas.zy  memory_correct_02_functions.expected  memory_correct_02_functions.zy  memory_correct_03_patterns.expected  memory_correct_03_patterns.zy  parser_integration.rs  precision_expressions.expected  precision_expressions.zy  precision_pool.expected  precision_pool.zy  scope01_if_block.expected  scope01_if_block.zy  scope02_nested_blocks.expected  scope02_nested_blocks.zy  scope03_loop_block.expected  scope03_loop_block.zy  scope04_match_block.expected  scope04_match_block.zy  scope05_shadowing.expected  scope05_shadowing.zy  scope_correct_01_blocks.expected  scope_correct_01_blocks.zy  test_catch01_basic.expected  test_catch01_basic.zy  test_catch02_error.expected  (+19 more)
(+809 files in other folders)
