[package]
name = "zymbol-analyzer"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "LSP analysis engine for Zymbol-Lang"

[dependencies]
zymbol-span.workspace = true
zymbol-error.workspace = true
zymbol-lexer.workspace = true
zymbol-parser.workspace = true
zymbol-ast.workspace = true
zymbol-semantic.workspace = true

lsp-types = "0.94"
dashmap = "6"
parking_lot = "0.12"
once_cell = "1.18"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
