[package]
name = "zymbol-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Language Server Protocol implementation for Zymbol-Lang"

[[bin]]
name = "zymbol-lsp"
path = "src/main.rs"

[lib]
name = "zymbol_lsp"
path = "src/lib.rs"

[dependencies]
zymbol-analyzer = { path = "../zymbol-analyzer" }
zymbol-formatter = { path = "../zymbol-formatter" }

# LSP framework
tower-lsp = "0.20"
lsp-types = "0.97"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
dashmap = "6"
