[package]
name = "zymbol-vm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Register-based virtual machine executor for Zymbol-Lang"

[dependencies]
zymbol-bytecode.workspace = true
zymbol-lexer.workspace = true
zymbol-intrinsics.workspace = true
thiserror.workspace = true
